K8sdeploy/sukt-core-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sukt-core-admin-pod
  namespace: sukt-core
spec:
  selector:
    matchLabels:
      app: sukt-core-admin-pod
  template:
    metadata:
      labels:
        app: sukt-core-admin-pod
    spec:
      nodeName: k8sworknode1
      containers:
        - name: sukt-core-admin-server-api
          image: registry.cn-hangzhou.aliyuncs.com/suktcore/sukt-core-admin-api:v1.2
          resources:
            limits:
              memory: "500Mi" #内存资源 
              cpu: "150m" #CPU资源 1H=1000
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: test
              readOnly: true
              subPath: appsettings.json
          readinessProbe:
            httpGet: 
              path: /api/healthchecks/readiness
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60 
          livenessProbe:
            httpGet:
              path: /api/healthchecks/liveness
              port: 80
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 60 
      imagePullSecrets:
        - name: aliyun-iamge-secret
      volumes:
        - configMap:
            defaultMode: 420
            name:  sukt-core-admin-appsettings
          name: test
