K8sdeploy/sukt-core-admin-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sukt-core-admin
  name: sukt-core-admin
  namespace: sukt-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sukt-core-admin
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sukt-core-admin
    spec:
      containers:
        - name: sukt-core-admin
          image: registry.cn-hangzhou.aliyuncs.com/suktcore/sukt-core-admin-api:dockerfilebuild.1198392948.8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/healthchecks/liveness
              port: 80
              scheme: HTTP
              initialDelaySeconds: 120
              periodSeconds: 30 
              # timeoutSeconds: 60
          readinessProbe:
            httpGet: 
              path: /api/healthchecks/readiness
              port: 80
              scheme: HTTP
              initialDelaySeconds: 30
              periodSeconds: 60 
              # timeoutSeconds: 60
          resources:
            limits:
              memory: "500Mi" #内存资源 
              cpu: "400m" #CPU资源 1H=1000
          ports:
          - containerPort: 80
            protocol: TCP
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: appsettings
              readOnly: true
              subPath: appsettings.json
      restartPolicy: Always    
      imagePullSecrets:
        - name: aliyun-iamge-secret
      volumes:
        - configMap:
            defaultMode: 420
            name:  sukt-core-admin-appsettings
          name: appsettings
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sukt-core-admin
  name: sukt-core-admin
  namespace: sukt-core
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sukt-core-admin
  type: ClusterIP
