K8sdeploy/sukt-platform-admin-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sukt-platform-admin
  name: sukt-platform-admin
  namespace: sukt-platform
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sukt-platform-admin
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sukt-platform-admin
    spec:
      containers:
      - name: sukt-platform-admin
        image: registry.cn-hangzhou.aliyuncs.com/sukt-platform/sukt-admin-api:develop.1806860937.61
        imagePullPolicy: IfNotPresent
        livenessProbe:
            httpGet:
              path: /api/healthchecks/liveness
              port: 80
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 30 
              # timeoutSeconds: 60
        readinessProbe:
          httpGet: 
            path: /api/healthchecks/readiness
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60 
            # timeoutSeconds: 60
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
        - name: aliyun-iamge-secret
---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: sukt-platform-admin
#   name: sukt-platform-admin
#   namespace: sukt-platform
# spec:
#   selector:
#     app: sukt-platform-admin
#   ports:
#   - port: 80
#     targetPort: 80
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sukt-platform-admin-nodetype
  name: sukt-platform-admin-nodetype
  namespace: sukt-platform
spec:
  type: NodePort
  selector:
    app: sukt-platform-admin
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30210
