K8sdeploy/sukt-platform-admin-service-nodetype.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sukt-platform-admin-nodetype
  name: sukt-platform-admin-nodetype
  namespace: sukt-platform
spec:
  type: NodePort
  selector:
    app: sukt-platform-admin
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30101
