K8sdeploy/sukt-core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sukt-core-ingress
  namespace: sukt-core
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: admin.test.com 
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: sukt-core-admin
          servicePort: 80
          # service:
          #   name: sukt-core-admin
          #   port:
          #     number: 80
