K8sdeploy/sukt-platform-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sukt-core-admin
  namespace: sukt-core
  labels:
    name: sukt-core-admin
spec:
  rules:
  - host: admin.suktcore.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sukt-core-admin
            port: 
              number: 80
